[tool.poetry]
name = "homework19-1"
version = "0.1.0"
description = ""
authors = ["Veronika <veronika-mg@bk.ru>"]
readme = "README.md"
packages = [{include = "homework19"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
